--- a/predictions/Predictions_Rookies.ipynb
+++ b/predictions/Predictions_Rookies.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled78.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtwwt5W7sVGWsaMVZ8uGw8",
+      "authorship_tag": "ABX9TyOVeLOviIUgO/Xn8KPvmP6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "TejDRzCRssXB",
         "colab_type": "code",
-        "outputId": "3fe3530e-ffc4-4f6c-b526-723c10eee5b4",
+        "outputId": "ac7cec3e-9970-452d-8a10-2257532ce9ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "ipRc24Sns4z0",
         "colab_type": "code",
-        "outputId": "c970c74b-1493-426c-e423-3e99a7e1359f",
+        "outputId": "4638e29c-2fd4-49d9-f7af-5f585e01d9a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -511,7 +511,7 @@
       "metadata": {
         "id": "xQsbhKXUD1kP",
         "colab_type": "code",
-        "outputId": "81a46de4-cd69-44a4-ab5c-8d248d2aff6f",
+        "outputId": "464e364f-0b5a-429e-ca31-19212805d064",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -623,7 +623,7 @@
       "metadata": {
         "id": "CM9b9lzfDmv1",
         "colab_type": "code",
-        "outputId": "bbb0a28f-002b-49f4-908c-f75b1b6acfd2",
+        "outputId": "95ec9752-35e4-4aab-c9c7-08cd13ba0f64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -918,10 +918,10 @@
       "metadata": {
         "id": "bhyiPNCtzkk1",
         "colab_type": "code",
-        "outputId": "69cfb2e4-8a4e-427f-9aa9-f7fe6416f335",
+        "outputId": "9833f5bc-60b5-4788-e0ac-797b20ce91a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 309
         }
       },
       "source": [
@@ -1092,10 +1092,10 @@
       "metadata": {
         "id": "NGbgn6O-9TaN",
         "colab_type": "code",
-        "outputId": "d9d316bc-d735-41ae-c9df-c6b066cd9cf8",
+        "outputId": "8568650f-dade-46b5-da2e-b463e08f03ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 326
         }
       },
       "source": [
@@ -1298,10 +1298,10 @@
       "metadata": {
         "id": "TV-wQMCPGN6n",
         "colab_type": "code",
-        "outputId": "5c3ed841-492f-41cb-923c-6eb86faba119",
+        "outputId": "acdfd407-34ce-4ca8-bbc1-fe3725403561",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 156
         }
       },
       "source": [
@@ -1338,13 +1338,13 @@
         {
           "output_type": "stream",
           "text": [
-            "[15:30:29] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "Validation Mean Absolute Error: 30.827245421525344\n",
-            "Validation R^2: 0.4855802620513896\n",
+            "[17:59:00] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "Validation Mean Absolute Error: 33.52964909886851\n",
+            "Validation R^2: 0.39974062135875055\n",
             "\n",
             "\n",
-            "Test Mean Absolute Error: 30.22407787628894\n",
-            "Test R^2: 0.4579926498274599\n"
+            "Test Mean Absolute Error: 31.28623723315743\n",
+            "Test R^2: 0.43312035350627165\n"
           ],
           "name": "stdout"
         }
@@ -1355,7 +1355,7 @@
       "metadata": {
         "id": "1OvReWreGqwC",
         "colab_type": "code",
-        "outputId": "2432db41-3d9e-48da-c66c-738924f5c73d",
+        "outputId": "7648b19e-7c49-4a32-c7a1-c7c1c4d2c23a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -1433,9 +1433,9 @@
               "      <td>Utah</td>\n",
               "      <td>Pacific 12</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>97.097916</td>\n",
-              "      <td>-42.902084</td>\n",
-              "      <td>-0.441844</td>\n",
+              "      <td>80.713760</td>\n",
+              "      <td>-59.286240</td>\n",
+              "      <td>-0.734525</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1455,9 +1455,9 @@
               "      <td>Illinois</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>61.544170</td>\n",
-              "      <td>-25.455830</td>\n",
-              "      <td>-0.413619</td>\n",
+              "      <td>32.714558</td>\n",
+              "      <td>-54.285442</td>\n",
+              "      <td>-1.659367</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1477,9 +1477,9 @@
               "      <td>Oklahoma</td>\n",
               "      <td>Big 12</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>127.132736</td>\n",
-              "      <td>15.132736</td>\n",
-              "      <td>0.119031</td>\n",
+              "      <td>131.984161</td>\n",
+              "      <td>19.984161</td>\n",
+              "      <td>0.151413</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1499,9 +1499,9 @@
               "      <td>Virginia Tech</td>\n",
               "      <td>Atlantic Coast (ACC)</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>52.360210</td>\n",
-              "      <td>-71.639790</td>\n",
-              "      <td>-1.368210</td>\n",
+              "      <td>48.127018</td>\n",
+              "      <td>-75.872982</td>\n",
+              "      <td>-1.576515</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1521,21 +1521,21 @@
               "      <td>Purdue</td>\n",
               "      <td>Big Ten</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>18.701839</td>\n",
-              "      <td>-36.658161</td>\n",
-              "      <td>-1.960137</td>\n",
+              "      <td>3.567758</td>\n",
+              "      <td>-51.792242</td>\n",
+              "      <td>-14.516748</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "    player position1  height  weight  ...  points  prediction       diff   percent\n",
-              "0  MG-0306         K    72.0   232.0  ...  140.00   97.097916 -42.902084 -0.441844\n",
-              "1  CM-2137         K    73.0   190.0  ...   87.00   61.544170 -25.455830 -0.413619\n",
-              "2  AS-0575         K    69.0   209.0  ...  112.00  127.132736  15.132736  0.119031\n",
-              "3  JS-3825         K    71.0   210.0  ...  124.00   52.360210 -71.639790 -1.368210\n",
-              "4  DB-2750        QB    72.0   205.0  ...   55.36   18.701839 -36.658161 -1.960137\n",
+              "    player position1  height  weight  ...  points  prediction       diff    percent\n",
+              "0  MG-0306         K    72.0   232.0  ...  140.00   80.713760 -59.286240  -0.734525\n",
+              "1  CM-2137         K    73.0   190.0  ...   87.00   32.714558 -54.285442  -1.659367\n",
+              "2  AS-0575         K    69.0   209.0  ...  112.00  131.984161  19.984161   0.151413\n",
+              "3  JS-3825         K    71.0   210.0  ...  124.00   48.127018 -75.872982  -1.576515\n",
+              "4  DB-2750        QB    72.0   205.0  ...   55.36    3.567758 -51.792242 -14.516748\n",
               "\n",
               "[5 rows x 19 columns]"
             ]
@@ -1557,13 +1557,14 @@
       "source": [
         "# Add a row to the final_df dataframe\n",
         "# Each row represents the predicted points for each rookie\n",
-        "def add_row(df, p, f, l, n, pos, pred, act, diff, pct):\n",
+        "def add_row(df, p, f, l, n, pos, cur, pred, act, diff, pct):\n",
         "\n",
         "    df = df.append({'player': p,\n",
         "                    'first': f,\n",
         "                    'last': l,\n",
         "                    'name': n,\n",
         "                    'position': pos,\n",
+        "                    'week1-cur': cur,\n",
         "                    'week1-pred': pred,\n",
         "                    'week1-act': act,\n",
         "                    'week1-diff': diff,\n",
@@ -1588,7 +1589,8 @@
         "                'first',\n",
         "                'last',\n",
         "                'name',\n",
-        "                'position', \n",
+        "                'position',\n",
+        "                'week1-cur', \n",
         "                'week1-pred',\n",
         "                'week1-act',\n",
         "                'week1-diff',\n",
@@ -1605,12 +1607,14 @@
         "    last = player_df['last'].loc[(player_df['player']==player)].iloc[0]\n",
         "    name = player_df['name'].loc[(player_df['player']==player)].iloc[0]\n",
         "    position = player_df['position1'].loc[(player_df['player']==player)].iloc[0]\n",
+        "\n",
+        "    week1_cur = 0\n",
         "    week1_pred = results_df['prediction'].loc[(results_df['player']==player)].iloc[0]\n",
         "    week1_act = results_df['points'].loc[(results_df['player']==player)].iloc[0]\n",
         "    week1_diff = results_df['diff'].loc[(results_df['player']==player)].iloc[0]\n",
         "    week1_pct = results_df['percent'].loc[(results_df['player']==player)].iloc[0]\n",
         "\n",
-        "    final_df = add_row(final_df, player, first, last, name, position, week1_pred, week1_act, week1_diff, week1_pct)"
+        "    final_df = add_row(final_df, player, first, last, name, position, week1_cur, week1_pred, week1_act, week1_diff, week1_pct)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1620,11 +1624,11 @@
       "metadata": {
         "id": "4DRKFnXQHBM9",
         "colab_type": "code",
+        "outputId": "f1e215e4-ca94-4bf4-b368-0c8214cae3a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "2565b2a7-409b-4b0c-b974-56f9bb196652"
+        }
       },
       "source": [
         "final_df['week1-pred'] = final_df['week1-pred'].astype(int)\n",
@@ -1659,6 +1663,7 @@
               "      <th>last</th>\n",
               "      <th>name</th>\n",
               "      <th>position</th>\n",
+              "      <th>week1-cur</th>\n",
               "      <th>week1-pred</th>\n",
               "      <th>week1-act</th>\n",
               "      <th>week1-diff</th>\n",
@@ -1673,10 +1678,11 @@
               "      <td>Gay</td>\n",
               "      <td>Matt Gay</td>\n",
               "      <td>K</td>\n",
-              "      <td>97</td>\n",
+              "      <td>0</td>\n",
+              "      <td>80</td>\n",
               "      <td>140.00</td>\n",
-              "      <td>-42.902084</td>\n",
-              "      <td>-0.441844</td>\n",
+              "      <td>-59.286240</td>\n",
+              "      <td>-0.734525</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1685,10 +1691,11 @@
               "      <td>McLaughlin</td>\n",
               "      <td>Chase McLaughlin</td>\n",
               "      <td>K</td>\n",
-              "      <td>61</td>\n",
+              "      <td>0</td>\n",
+              "      <td>32</td>\n",
               "      <td>87.00</td>\n",
-              "      <td>-25.455830</td>\n",
-              "      <td>-0.413619</td>\n",
+              "      <td>-54.285442</td>\n",
+              "      <td>-1.659367</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1697,10 +1704,11 @@
               "      <td>Seibert</td>\n",
               "      <td>Austin Seibert</td>\n",
               "      <td>K</td>\n",
-              "      <td>127</td>\n",
+              "      <td>0</td>\n",
+              "      <td>131</td>\n",
               "      <td>112.00</td>\n",
-              "      <td>15.132736</td>\n",
-              "      <td>0.119031</td>\n",
+              "      <td>19.984161</td>\n",
+              "      <td>0.151413</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1709,10 +1717,11 @@
               "      <td>Slye</td>\n",
               "      <td>Joey Slye</td>\n",
               "      <td>K</td>\n",
-              "      <td>52</td>\n",
+              "      <td>0</td>\n",
+              "      <td>48</td>\n",
               "      <td>124.00</td>\n",
-              "      <td>-71.639790</td>\n",
-              "      <td>-1.368210</td>\n",
+              "      <td>-75.872982</td>\n",
+              "      <td>-1.576515</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1721,10 +1730,11 @@
               "      <td>Blough</td>\n",
               "      <td>David Blough</td>\n",
               "      <td>QB</td>\n",
-              "      <td>18</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
               "      <td>55.36</td>\n",
-              "      <td>-36.658161</td>\n",
-              "      <td>-1.960137</td>\n",
+              "      <td>-51.792242</td>\n",
+              "      <td>-14.516748</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1732,13 +1742,13 @@
             ],
             "text/plain": [
               "    player   first        last  ... week1-act week1-diff  week1-pct\n",
-              "0  MG-0306    Matt         Gay  ...    140.00 -42.902084  -0.441844\n",
-              "1  CM-2137   Chase  McLaughlin  ...     87.00 -25.455830  -0.413619\n",
-              "2  AS-0575  Austin     Seibert  ...    112.00  15.132736   0.119031\n",
-              "3  JS-3825    Joey        Slye  ...    124.00 -71.639790  -1.368210\n",
-              "4  DB-2750   David      Blough  ...     55.36 -36.658161  -1.960137\n",
+              "0  MG-0306    Matt         Gay  ...    140.00 -59.286240  -0.734525\n",
+              "1  CM-2137   Chase  McLaughlin  ...     87.00 -54.285442  -1.659367\n",
+              "2  AS-0575  Austin     Seibert  ...    112.00  19.984161   0.151413\n",
+              "3  JS-3825    Joey        Slye  ...    124.00 -75.872982  -1.576515\n",
+              "4  DB-2750   David      Blough  ...     55.36 -51.792242 -14.516748\n",
               "\n",
-              "[5 rows x 9 columns]"
+              "[5 rows x 10 columns]"
             ]
           },
           "metadata": {
