--- a/wrangling/Actuals_Defense.ipynb
+++ b/wrangling/Actuals_Defense.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMo+N+gHYAJ6fhU56MnOiFk",
+      "authorship_tag": "ABX9TyPfGGKa416I0O7y6GO3w3tu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1713,9 +1713,11 @@
         "            game = j\n",
         "            week = week + 1\n",
         "\n",
+        "            # Houston became a team in 2002\n",
         "            if (team == 'HOU') & (year < 2002) :\n",
         "                score = float('NaN')\n",
         "            else:\n",
+        "                # Check for bye week\n",
         "                if ((game_df['h'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty) & (game_df['v'].loc[(game_df['seas']==year) &\n",
         "                   (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty)):\n",
         "                    week = week + 1\n",
@@ -1723,7 +1725,6 @@
         "                else:\n",
         "                    score = pull_stats(defense_df, game_df, team, str(year), week, game)\n",
         "\n",
-        "            #print(team, year, week, game, score)\n",
         "            player_scores.append(score)\n",
         "\n",
         "    final_df = add_row(final_df, player, first, last, name, position1, player_scores)\n"
