--- a/wrangling/Actuals_Offense1.ipynb
+++ b/wrangling/Actuals_Offense1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled74.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNM0S6EA9cdboGWZFYqDJF6",
+      "authorship_tag": "ABX9TyORCPvywmZW1V+j3Hgg0gLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       },
       "source": [
         "# Load the raw data\n",
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/players.csv')\n",
-        "offense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/offense.csv')\n",
-        "td_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/td.csv')\n",
-        "game_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/game.csv')"
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/players.csv')\n",
+        "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/offense.csv')\n",
+        "td_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/td.csv')\n",
+        "game_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/game.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "O_pDKtnOSYBT",
         "colab_type": "code",
-        "outputId": "f61c9859-0d13-4048-b477-2c0d91a389fb",
+        "outputId": "274bc321-6543-49fa-99d0-ff0ce7877dea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "q0b3DP9LScDh",
         "colab_type": "code",
-        "outputId": "b68a1701-8a93-4d74-ffb8-5b0bfff2125b",
+        "outputId": "b8fa3f20-1955-4825-c686-b2cfc31b4eca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -468,10 +468,10 @@
       "metadata": {
         "id": "uXGJDVr_V1gf",
         "colab_type": "code",
-        "outputId": "8efcc24e-c0b9-496a-899b-290e305468d2",
+        "outputId": "38adebc4-49e9-44f8-b0a4-14d641958c79",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 204
         }
       },
       "source": [
@@ -661,7 +661,7 @@
       "metadata": {
         "id": "zl7QIoVSPO3x",
         "colab_type": "code",
-        "outputId": "dafce31b-dd4f-4ac5-cce1-6dde51242516",
+        "outputId": "d335f5b7-306f-42e3-b472-5f19eb366e27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -848,6 +848,7 @@
         "# Pull the stats to calculate the player points\n",
         "def pull_stats(df, df1, df2, col, p, y, g):\n",
         "\n",
+        "    # Set empty values to NaN if prior to start year, otherwise zero\n",
         "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['week']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -882,50 +883,10 @@
         "                 (rush_rec_td40 * 2) + \\\n",
         "                 (pass_td40)\n",
         "\n",
-        "        #print('rush tds', rush_tds, 'rec tds', receive_tds, 'pass tds', pass_tds, \n",
-        "        #      'return tds', return_tds, 'conversions', convs, 'rush yds', rush_yds, \n",
-        "        #      'receive yds', receive_yds, 'pass yds', pass_yds, 'ints', ints, 'fumbles', fumbles,\n",
-        "        #       'rush/rec TD 40', rush_rec_td40, 'pass TD 40', pass_td40)\n",
-        "\n",
         "    return points"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eZbIZpdJcR4D",
-        "colab_type": "code",
-        "outputId": "0c611cf4-9ea7-4fc4-bb5f-ed0948212982",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "player = 'TB-2300'\n",
-        "year = 2019,\n",
-        "week = 1\n",
-        "\n",
-        "test = pull_stats(offense_df, player_df, td_df, 'fp', player, year, week)\n",
-        "test"
-      ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "26.64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1276,7 +1237,7 @@
       "metadata": {
         "id": "fAzOtuI3N-pj",
         "colab_type": "code",
-        "outputId": "2956de33-34e6-4cb5-b88c-e8d93c861411",
+        "outputId": "67b55d52-2491-49e3-ee74-1ebf95825c1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1629,6 +1590,7 @@
         "\n",
         "    print(player)\n",
         "\n",
+        "    # Determine the current team of the player\n",
         "    for s in range(1, 17):\n",
         "        if offense_df['team'].loc[(offense_df['player']==player) & (offense_df['seas']==s)].empty:\n",
         "            x = 0\n",
@@ -1644,6 +1606,7 @@
         "        for game in range(1,17):\n",
         "            week = week + 1\n",
         "\n",
+        "            # Check the current team of the player\n",
         "            if (offense_df['team'].loc[(offense_df['player']==player) & (offense_df['year']==year) & (offense_df['week']==week)].empty):\n",
         "                x = 0\n",
         "            else:\n",
@@ -1652,6 +1615,7 @@
         "            if team != new_team:\n",
         "                team = new_team\n",
         "\n",
+        "            # Handle the bye week\n",
         "            if ((game_df['h'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty) &\n",
         "                (game_df['v'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty)):\n",
         "                week = week + 1\n",
@@ -1663,7 +1627,7 @@
         "\n",
         "    final_df = add_row(final_df, player, first, last, name, position1, player_scores)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2257,7 +2221,7 @@
       "metadata": {
         "id": "i-muvKifV5rA",
         "colab_type": "code",
-        "outputId": "51f8156b-1f58-4478-d877-dfbbb932b5de",
+        "outputId": "6eb6deaa-05ee-447f-bb87-5c4095c48a50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2266,7 +2230,7 @@
       "source": [
         "final_df.head(50)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6638,7 +6602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
