--- a/rookies/Rookie_2019_Kicker_Calc.ipynb
+++ b/rookies/Rookie_2019_Kicker_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled75.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOHWKdAPEmd4hGjg8d2ppfx",
+      "authorship_tag": "ABX9TyPnqlb+MlRqvVqx23Lzu10r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       },
       "source": [
         "# Load the raw data\n",
-        "rookie_kicker_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies.csv')\n",
-        "kicking_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/kicking.csv')\n",
-        "missed_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/missedfg.csv')\n",
-        "conv_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/conv.csv')"
+        "rookie_kicker_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies.csv')\n",
+        "kicking_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/kicking.csv')\n",
+        "missed_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/missedfg.csv')\n",
+        "conv_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/conv.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "mV9wV6zGaRTI",
         "colab_type": "code",
-        "outputId": "cec87708-29a0-4ee4-db9e-244e33ddcf81",
+        "outputId": "ac4aebd4-6c10-4f3a-a7fd-186021a97428",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "0msfUYmMb1-t",
         "colab_type": "code",
-        "outputId": "7bde548a-7a85-4f70-dea9-a4e89451dabb",
+        "outputId": "92708a53-3066-4152-f262-871c10c5b2c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "C_u-io7WcaKF",
         "colab_type": "code",
-        "outputId": "e929a4c8-de7e-472b-8ed8-6fc8065f2bd2",
+        "outputId": "c0354091-68e2-45cc-bba2-d32214de4d59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -499,11 +499,11 @@
       "metadata": {
         "id": "6bcVGB8l7sL6",
         "colab_type": "code",
+        "outputId": "ae207cb9-685c-409e-f413-61e7fda04d5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
-        },
-        "outputId": "66584cff-2530-4525-ae1c-b541868f5c40"
+        }
       },
       "source": [
         "# The conversion dataframe - raw conversion data\n",
@@ -693,6 +693,8 @@
         "def pull_stats(df, df1, df2, df3, col, p, y, g):\n",
         "    missedfg_points = 0\n",
         "    conversion_points = 0\n",
+        "\n",
+        "    # Fill missing values with NaN if prior to start year, else zero\n",
         "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -816,7 +818,7 @@
       "metadata": {
         "id": "l_vT0yPSkX4O",
         "colab_type": "code",
-        "outputId": "32fe4094-13e2-4e07-ba3c-ba235bd999ef",
+        "outputId": "c3672aec-5571-4364-99b9-967ac2ecc07d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 261
