--- a/rookies/Rookie_2019_Offense_Calc.ipynb
+++ b/rookies/Rookie_2019_Offense_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled76.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9N1NU4/3CoJTwMnZ9q03t",
+      "authorship_tag": "ABX9TyNSUAH5kwMDPlBfzt0IGpDY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       },
       "source": [
         "# Load the raw data\n",
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies.csv')\n",
-        "offense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/offense.csv')\n",
-        "td_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/td.csv')\n",
-        "game_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/game.csv')"
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies.csv')\n",
+        "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/offense.csv')\n",
+        "td_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/td.csv')\n",
+        "game_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/game.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "bQkU4iu0odC-",
         "colab_type": "code",
-        "outputId": "60d2f9a0-3d49-4dc1-97ae-5c23e5b140f6",
+        "outputId": "2fe44360-79b7-4a1a-e938-c34f3b6fdce0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "Jp9l25B1o5Xc",
         "colab_type": "code",
-        "outputId": "119fb492-70d5-4544-b94f-a867616b4d4e",
+        "outputId": "5d21ada9-8c8d-4b76-a75b-1739b1318786",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -468,7 +468,7 @@
       "metadata": {
         "id": "3O6L_uRro9lc",
         "colab_type": "code",
-        "outputId": "a2c5bfdc-5cdb-4cdf-aeb0-d62a57d79eec",
+        "outputId": "3c219a21-b3a7-4cc3-d42b-67b24a9b6611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -661,7 +661,7 @@
       "metadata": {
         "id": "vO3DsUOHpBG9",
         "colab_type": "code",
-        "outputId": "09a8eb04-7a58-4ef9-8fcb-113f2ad34d51",
+        "outputId": "8d385438-8355-4c7e-b611-6272b8ce4cf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -848,6 +848,7 @@
         "# Pull the stats to calculate the player points\n",
         "def pull_stats(df, df1, df2, col, p, y, g):\n",
         "\n",
+        "    # Fill the missing values with NaN prior to start year, else use zero\n",
         "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['week']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -881,11 +882,6 @@
         "                 (fumbles * 2) + \\\n",
         "                 (rush_rec_td40 * 2) + \\\n",
         "                 (pass_td40)\n",
-        "\n",
-        "        #print('rush tds', rush_tds, 'rec tds', receive_tds, 'pass tds', pass_tds, \n",
-        "        #      'return tds', return_tds, 'conversions', convs, 'rush yds', rush_yds, \n",
-        "        #      'receive yds', receive_yds, 'pass yds', pass_yds, 'ints', ints, 'fumbles', fumbles,\n",
-        "        #       'rush/rec TD 40', rush_rec_td40, 'pass TD 40', pass_td40)\n",
         "\n",
         "    return points"
       ],
@@ -937,7 +933,7 @@
       "metadata": {
         "id": "tDsMwAltpqd6",
         "colab_type": "code",
-        "outputId": "afcdac41-df5a-4138-81af-630bc7d1e034",
+        "outputId": "2ec671e7-aa74-449b-c215-498a16d2d039",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -987,6 +983,7 @@
         "\n",
         "    print(player)\n",
         "\n",
+        "    # Check the player's team\n",
         "    for s in range(1, 17):\n",
         "        if offense_df['team'].loc[(offense_df['player']==player) & (offense_df['seas']==s)].empty:\n",
         "            x = 0\n",
@@ -1002,6 +999,7 @@
         "    for game in range(1,17):\n",
         "        week = week + 1\n",
         "\n",
+        "        # Get the current team\n",
         "        if (offense_df['team'].loc[(offense_df['player']==player) & (offense_df['year']==year) & (offense_df['week']==week)].empty):\n",
         "            x = 0\n",
         "        else:\n",
@@ -1010,6 +1008,7 @@
         "        if team != new_team:\n",
         "            team = new_team\n",
         "\n",
+        "        # handle the bye week\n",
         "        if ((game_df['h'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty) &\n",
         "            (game_df['v'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty)):\n",
         "            week = week + 1\n",
@@ -1138,7 +1137,7 @@
       "metadata": {
         "id": "-F8x1Ovnruw7",
         "colab_type": "code",
-        "outputId": "6a4b925b-c7fc-4e37-daa2-133712eaefcc",
+        "outputId": "c6914f2b-529c-4777-97cc-ecae343e2e97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
