--- a/rookies/Rookie_Kicker_Calc.ipynb
+++ b/rookies/Rookie_Kicker_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled75.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvWGL0NDfvM+527NWE2V4m",
+      "authorship_tag": "ABX9TyMXa0VN60gwBgoDrNr3sCYC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       },
       "source": [
         "# Load the raw data\n",
-        "rookie_kicker_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies_non_kicker.csv')\n",
-        "kicking_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/kicking.csv')\n",
-        "missed_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/missedfg.csv')\n",
-        "conv_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/conv.csv')"
+        "rookie_kicker_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_kicker.csv')\n",
+        "kicking_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/kicking.csv')\n",
+        "missed_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/missedfg.csv')\n",
+        "conv_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/conv.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "mV9wV6zGaRTI",
         "colab_type": "code",
-        "outputId": "a275a406-641e-4564-f5af-1e486b2529cf",
+        "outputId": "682114b8-ccc0-4dde-de1b-f0588ad5bea0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "0msfUYmMb1-t",
         "colab_type": "code",
-        "outputId": "45f89cd6-a8aa-4ce5-b913-96b273c7f6d1",
+        "outputId": "581ab5c3-39cd-4ca4-92ab-233352445d52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "C_u-io7WcaKF",
         "colab_type": "code",
-        "outputId": "eef35980-e7d0-4c74-c525-045f49f087d8",
+        "outputId": "07f90401-3ea0-4194-e7ed-961d8cba0bb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -499,7 +499,7 @@
       "metadata": {
         "id": "zBjl61vZIPs-",
         "colab_type": "code",
-        "outputId": "49ab025f-3f9d-4f9b-d341-db366a069029",
+        "outputId": "22e9d646-c9e2-4791-de62-28cb4d1c6fa9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -692,6 +692,8 @@
         "def pull_stats(df, df1, df2, df3, col, p, y, g):\n",
         "    missedfg_points = 0\n",
         "    conversion_points = 0\n",
+        "\n",
+        "    # Fill the empty values with NaN prior to start year, else use zero\n",
         "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['game']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -814,7 +816,7 @@
       "metadata": {
         "id": "l_vT0yPSkX4O",
         "colab_type": "code",
-        "outputId": "e24cd118-ed1c-4364-e49d-ccfe1bb6b892",
+        "outputId": "d56ef3f7-1903-40d8-fc06-45da80f69812",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
