--- a/rookies/Rookie_Offense_Calc.ipynb
+++ b/rookies/Rookie_Offense_Calc.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled76.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMT5jlfyso+m7SROGekJ/3r",
+      "authorship_tag": "ABX9TyMjRzTBz/L8ZOaA9UzRaBga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,10 +47,10 @@
       },
       "source": [
         "# Load the raw data\n",
-        "player_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/rookies_non_offense.csv')\n",
-        "offense_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/offense.csv')\n",
-        "td_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/td.csv')\n",
-        "game_df = pd.read_csv('https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-revised/game.csv')"
+        "player_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/rookies_non_offense.csv')\n",
+        "offense_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/offense.csv')\n",
+        "td_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/td.csv')\n",
+        "game_df = pd.read_csv('https://raw.githubusercontent.com/Lambda-School-Labs/nfl-fantasy-ds/master/data/raw/game.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "bQkU4iu0odC-",
         "colab_type": "code",
-        "outputId": "02339aa0-453a-4188-8ce2-309e06312749",
+        "outputId": "6c6300e5-89bc-42ed-eadf-6a114964a8bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "Jp9l25B1o5Xc",
         "colab_type": "code",
-        "outputId": "f078fc6a-0287-4d39-d47e-48c5a32f88f7",
+        "outputId": "e0242da6-2d78-4fba-b84b-fe6df3190ff9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -468,7 +468,7 @@
       "metadata": {
         "id": "3O6L_uRro9lc",
         "colab_type": "code",
-        "outputId": "ab6b14e6-1c6a-420c-de5a-f0323e0545e7",
+        "outputId": "8bc0a67c-e034-46b0-deb6-148af9aae5a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -661,7 +661,7 @@
       "metadata": {
         "id": "vO3DsUOHpBG9",
         "colab_type": "code",
-        "outputId": "6d8e592e-caf2-4fb4-a115-95954c1f8510",
+        "outputId": "16b95687-6e76-4a95-db04-791ae1abc970",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -848,6 +848,7 @@
         "# Pull the stats to calculate the player points\n",
         "def pull_stats(df, df1, df2, col, p, y, g):\n",
         "\n",
+        "    # Fill empty values with NaN if prior to start year, else use zero\n",
         "    if (df[col].loc[(df['player']==p) & (df['year']==y) & (df['week']==g)].empty):\n",
         "        start_year = df1['start'].loc[(df1['player']==p)].iloc[0]\n",
         "        if y < start_year:\n",
@@ -881,11 +882,6 @@
         "                 (fumbles * 2) + \\\n",
         "                 (rush_rec_td40 * 2) + \\\n",
         "                 (pass_td40)\n",
-        "\n",
-        "        #print('rush tds', rush_tds, 'rec tds', receive_tds, 'pass tds', pass_tds, \n",
-        "        #      'return tds', return_tds, 'conversions', convs, 'rush yds', rush_yds, \n",
-        "        #      'receive yds', receive_yds, 'pass yds', pass_yds, 'ints', ints, 'fumbles', fumbles,\n",
-        "        #       'rush/rec TD 40', rush_rec_td40, 'pass TD 40', pass_td40)\n",
         "\n",
         "    return points"
       ],
@@ -937,7 +933,7 @@
       "metadata": {
         "id": "tDsMwAltpqd6",
         "colab_type": "code",
-        "outputId": "fb75e676-1078-4112-d7c3-2eebda99ba50",
+        "outputId": "353b469e-1f80-444e-9394-d9d9a09a809a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -988,6 +984,7 @@
         "\n",
         "    print(player)\n",
         "\n",
+        "    # Check the player's team\n",
         "    for s in range(1, 17):\n",
         "        if offense_df['team'].loc[(offense_df['player']==player) & (offense_df['seas']==s)].empty:\n",
         "            x = 0\n",
@@ -1003,6 +1000,7 @@
         "    for game in range(1,17):\n",
         "        week = week + 1\n",
         "\n",
+        "        # Check the player's team\n",
         "        if (offense_df['team'].loc[(offense_df['player']==player) & (offense_df['year']==year) & (offense_df['week']==week)].empty):\n",
         "            x = 0\n",
         "        else:\n",
@@ -1011,6 +1009,7 @@
         "        if team != new_team:\n",
         "            team = new_team\n",
         "\n",
+        "        # Handle the bye week\n",
         "        if ((game_df['h'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty) &\n",
         "            (game_df['v'].loc[(game_df['seas']==year) & (game_df['wk']==week) & ((game_df['v']==team) | (game_df['h']==team))].empty)):\n",
         "            week = week + 1\n",
@@ -1514,7 +1513,7 @@
       "metadata": {
         "id": "-F8x1Ovnruw7",
         "colab_type": "code",
-        "outputId": "749ce55d-5b4f-4031-bfc5-9e635c04517a",
+        "outputId": "fcbedaad-4ed2-4008-c605-d45dc4430d29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
